@@ -2,6 +2,13 @@ Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
 
+  - Make accessors read/write (instead of read-only)
+    for consistency with Pod::Simple classes.
+
+  [Backward Compatibility Change]
+  - Passing unknown arguments to the constructor now produces a warning
+    and in the future will throw an error.
+
 2.002     2014-07-05T15:20:40Z
 
   - Docs: Add example of command line usage to Synopsis.
